@@ -12,6 +12,8 @@ PHP                                                                        NEWS
 
 - Fixed bug #50282 (xmlrpc_encode_request() changes object into array in 
   calling function). (Felipe)
+- Fixed bug #50255 (isset() and empty() silently casts array to object).
+  (Felipe)
 - Fixed bug #50219 (soap call Segmentation fault on a redirected url).
   (Pierrick)
 - Fixed bug #50207 (segmentation fault when concatenating very large strings
